Fix header width stretching past container boundaries

--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -23,6 +23,7 @@ h4 {
 
 .main-container {
   width: 100%;
+  /* width: 1400px; */
   height: 100%;
   margin: 0 auto;
   padding: 0;
@@ -46,6 +47,8 @@ section {
   height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: relative;
 }
 
@@ -74,6 +77,7 @@ section {
   position: absolute;
   top: 20px;
   width: 100%;
+  max-width: 1400px;
   height: 60px;
   display: flex;
   align-items: center;
@@ -87,7 +91,8 @@ section {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 1400px;
+  /* width: 1400px; */
+  width: 100%;
   padding: 0 50px;
   background: transparent;
   -webkit-transition: all 0.5s ease;
